--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,8 +16,7 @@ http {
 
     # Xác định thư mục chứa mã nguồn của website
 		location / {
-        # Khi nginx nhận yêu cầu, nó sẽ chuyển yêu cầu đến dịch vụ "wordpress trên cổng 80
-        # wordpress là tên của dịch vụ trong file docker-compose.yml
+        # Khi nginx nhận yêu cầu, nó sẽ chuyển yêu cầu đến dịch vụ "localhost trên cổng 8080
         proxy_pass http://localhost:8080;
         
         #
