--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 events {
     worker_connections 1024;
 }
-
+#hello hello
 http {
     include       mime.types;
     default_type  application/octet-stream;
